--- a/src/index.html
+++ b/src/index.html
@@ -6,9 +6,9 @@
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link rel="apple-touch-icon" href="assets/icons/icon-72x72.png">
-  <link rel="apple-touch-icon" sizes="152x152" href="assets/icons/nd-icon-152x152.png">
+  <link rel="icon" type="image/x-icon" href="assets/icons/nd-icon-2-72x72.png">
+  <link rel="apple-touch-icon" href="assets/icons/nd-icon-2-72x72.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="assets/icons/nd-icon-2-152x152.png">
   <link rel="manifest" href="manifest.json">
   <meta name="theme-color" content="#1976d2">
 </head>
